# srpc

./: CMakeLists.txt  README.md
3rd/: linux_3rd.sh  readme.txt  win_3rd.bat
inc/: coroutine.h  future.h  future.inl  promise.h  promise.inl  protobuf_codec.h  protobuf_codec.inl  rpc_base.h  rpc_channel.h  rpc_channel_group.h  rpc_client.h  rpc_client.inl  rpc_context.h  rpc_service.h  rpc_service.inl  when_all.h  when_all.inl
src/: CMakeLists.txt  coroutine.cpp  coroutine_impl.cpp  coroutine_impl.h  rpc.cpp  rpc_channel.cpp  rpc_channel_group.cpp  rpc_context.cpp  srpc.vcxproj  srpc.vcxproj.filters
test/proto/: request_msg.pb.cc  request_msg.pb.h  request_msg.proto  request_msg0.pb.cc  request_msg0.pb.h  request_msg0.proto  request_msg1.pb.cc  request_msg1.pb.h  request_msg1.proto  request_msg2.pb.cc  request_msg2.pb.h  request_msg2.proto  response_msg.pb.cc  response_msg.pb.h  response_msg.proto  response_msg1.pb.cc  response_msg1.pb.h  response_msg1.proto  response_msg2.pb.cc  response_msg2.pb.h  response_msg2.proto
test/test_srpc/: CMakeLists.txt  ReadMe.txt  message_queue.cpp  message_queue.h  stdafx.cpp  stdafx.h  targetver.h  test_srpc.cpp  test_srpc.vcxproj  test_srpc.vcxproj.filters
